# tasks

./: README.md
1.5 garden/: garden.cpp
10.3 wires/: generator  generator.cpp  input10.TXT  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.TXT  input8.txt  input9.txt  output.txt  wires  wires.cpp
11.6 line length/11.6 line length/: OUTPUT2.TXT  input1.txt  input2.TXT  input3.TXT  input4.TXT  input5.txt  line  line.cpp  output1.txt  output3.txt  output4.txt  output5.txt
11.6 line length/11.6 line length.xcodeproj/: project.pbxproj
2.4 cosmos way/: way.cpp
3.3 log/: log.cpp
Calculator/: CMakeLists.txt  main.cpp
Calculator/include/: BinaryFunction.h  Calculator.h  CalculatorController.h  IFunction.h  IObserver.h  UnaryFunction.h  Value.h  Variable.h
Calculator/src/: BinaryFunction.cpp  Calculator.cpp  IFunction.cpp  UnaryFunction.cpp  Value.cpp  Variable.cpp
classBasics/Command Line Tool/: main.cpp
classBasics/UnitTests/: СarTests.cpp
classBasics/classBasics/: Car.cpp  Car.h  CarController.cpp  CarController.h  main.cpp
classBasics/classBasics.xcodeproj/: project.pbxproj
http_url/: CMakeLists.txt  main.cpp
http_url/incude/: CHttpUrl.h  CUrlParsingError.h
http_url/src/: CHttpUrl.cpp  CUrlParsingError.cpp
log/: log.cpp
mapBasics/mapBasics/: dictionary.txt  main.cpp  map  map.cpp  map.h
mapBasics/mapBasics.xcodeproj/: project.pbxproj
mapBasics/tests/: dictionary.txt  tests  tests.cpp
setBasics/setBasics/: main.cpp  set  set.cpp  set.h
setBasics/setBasics.xcodeproj/: project.pbxproj
setBasics/tests/: tests  tests.cpp
(+32 files in other folders)
